# p4slice_api

./: .gitignore  Dockerfile  LICENSE  README.md  config.json  database.py  dependencies.py  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  slice.conf
core/: dependencies.py  models.py
internal/: authlib.py  controller.py  util.py
routers/: admin.py  auth.py  slice.py
