[project]
name = "nicerslicer_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre", email = "pierre.brosemer@gmail.com"},
]
dependencies = ["SQLAlchemy>=2.0.36", "fastapi>=0.115.5", "python-jose[pycryptodome]>=3.3.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
