[project]
name = "nicerslicer_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre", email = "pierre.brosemer@gmail.com"},
]
dependencies = ["fastapi>=0.115.5", "pyjwt[crypto]>=2.10.0", "uvicorn[standard]>=0.32.1", "python-multipart>=0.0.17", "bcrypt>=4.2.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
